# voxelforge

./: .gitignore  .mcp.json  .opencode.json  CLAUDE.md  README.md  requirements.txt  setup.py
.claude/agents/: art-director.md  creative-director.md  game-designer.md  level-designer.md  qa-lead.md  voxelforge-dev.md
.claude/hooks/: pre-commit.sh
.claude/rules/: coding-standards.md
.claude/skills/: adr.md  brainstorm.md  gdd.md  generate.md  lore.md  mda.md  patch-notes.md  qa-plan.md  sprint.md
.claude/templates/: adr-template.md  gdd-template.md
.github/workflows/: ci.yml
cli/: __init__.py  main.py
design/adrs/: ADR-001-scene-json-format.md  ADR-002-pure-python-generators.md  ADR-003-api-first-with-local-fallback.md  ADR-004-lua-string-concatenation.md  ADR-005-natural-palette-default.md
design/gdds/: dungeon-rpg-example.md
design/sprints/: sprint-01-game-generator.md
docker/: Dockerfile  Dockerfile.inference  docker-compose.full.yml  docker-compose.yml  inference_entrypoint.sh
engine/: Makefile  main.c
engine/Assets/Game/Scripts/templates/: game_controller.lua  world_populator.lua
engine/Engine/: EngineCore.c  EngineCore.h
engine_vfe/: CMakeLists.txt  Makefile
engine_vfe/src/: main.c  vfe.h
engine_vfe/src/audio/: audio.c  audio.h
engine_vfe/src/core/: ecs.c  ecs.h  input.c  input.h  log.c  log.h  timer.c  timer.h  types.h  window.c  window.h
engine_vfe/src/ipc/: ipc.c  ipc.h
engine_vfe/src/libs/: cjson.h
engine_vfe/src/physics/: physics.c  physics.h
engine_vfe/src/renderer/: camera.c  camera.h  renderer.c  renderer.h  shader.c  shader.h
engine_vfe/src/scene/: scene.c  scene.h
engine_vfe/src/scripting/: lua_api.c  lua_api.h  lua_vm.c  lua_vm.h
engine_vfe/src/voxel/: mesher.c  mesher.h  vox_loader.c  vox_loader.h  voxel_data.c  voxel_data.h
examples/: 01_generate_assets.py  02_build_scene.py  03_ai_agent.py  04_openai_function_calling.py  05_generate_full_game.py
forge/: __init__.py  gamegen.py  imagegen.py  llm_router.py  local_llm.py  mcp_server.py  narrative.py  pipeline.py  project.py  scene.py  spritesheet.py  studio.py  voxel.py
forge/ai/: __init__.py  agent.py  tools.py
forge/api/: __init__.py  models.py  server.py
forge/api/static/: index.html
forge/export/: __init__.py  sprite_renderer.py
forge/generators/: __init__.py  buildings.py  characters.py  dungeon.py  game.py  props.py  terrain.py
tests/: __init__.py  test_voxel.py
